Overflow fix for game shortcuts
- Previously if game shortcuts overflowed the shortcut box, they would add the scrollbar and a weird gap -- This gap has been fixed. It's not PERFECT, but it's a LOT better.
- Added downloading toast when downloading Steam AppId list.
- When downloading AppId list for Steam, and something is still missing, it will be placed in as just the ID to prevent constant redownloading.

--- a/TcNo-Acc-Switcher-Server/wwwroot/css/UI.css
+++ b/TcNo-Acc-Switcher-Server/wwwroot/css/UI.css
@@ -376,6 +376,8 @@ button .caret, .button .caret {
   min-width: 36px;
   min-height: 36px;
   max-height: 260px;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 .shortcutDropdown #btnOpenShortcutFolder {
   position: absolute;
